--- a/table.html
+++ b/table.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="js/leftSide.js"></script>
 </head>
 <body>
 
 <table style="width:100%">
   <tr>
-    <th><iframe height="600" src="Bri_map.html"></iframe></th>
+    <th><iframe id="leftMap" height="600" src="Bri_map.html"></iframe></th>
     <th width="33%">Proposal</th>
     <th>Thailand</th>
 
