--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
   <tr>
     <th><iframe height="600" src="Bri_map.html"></iframe></th>
     <th width="33%">Proposal</th>
-    <th>Thailand</th>
+    <th><iframe height="600" src="Bri_Map_Thai.html"></iframe></th>
 
   </tr>
 </table>
