--- a/table.html
+++ b/table.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/leftSide.js"></script>
 </head>
 <body>
 
 <table style="width:100%">
   <tr>
-    <th><iframe id="leftMap" height="600" src="Bri_map.html"></iframe></th>
+    <th ><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button></th>
     <th width="33%">Proposal</th>
-    <th><iframe height="600" src="Bri_Map_Thai.html"></iframe></th>
+    <th id="rightMap"><iframe height="600" src="Bri_Map_Thai.html"></iframe></th>
+
+  </tr>
+  <tr>
+    <td>Details</td>
+    <td width="33%">Proposal</td>
+    <td>Country Details</td>
 
   </tr>
 </table>
