--- a/table.html
+++ b/table.html
@@ -24,9 +24,10 @@
   <tr>
     <th ><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button></th>
     <th width="33%">Proposal:
-    Me
+    <h3>Media Exports:</h3>
     <br>
     <input id="ex1" width:"100%" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
+
 
     </th>
     <th id="rightMap"><iframe height="600" src="Bri_Map_Thai.html"></iframe></th>
