--- a/table.html
+++ b/table.html
@@ -22,7 +22,13 @@
 
 <table style="width:100%">
   <tr>
-    <th ><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button></th>
+    <th ><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button>
+    
+      <div id="leftPopup" style="visibility:none">
+        over left popup
+      </div>
+    </th>
+    
     <th width="33%">Proposal:
     <h3>Media Exports:</h3>
     <br>
