--- a/table.html
+++ b/table.html
@@ -23,9 +23,16 @@
 <table style="width:100%">
   <tr>
     <th ><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button>
-    
+    <style ="text/css">
+    #leftPopup {
+        background-color: rgba(0, 0, 255, 0.3);
+    }
+</style>
       <div id="leftPopup" style="visibility:none">
-        over left popup
+        <b> background</b>
+          <p>stuff goes here</p>
+          <b>Issues</b>
+          <p>stuff goes here</p>
       </div>
     </th>
     
