--- a/table.html
+++ b/table.html
@@ -34,7 +34,7 @@
 </style>
       <div id="leftPopup" style="visibility:none">
         <b> background</b>
-          <p>stuff goes here</p>
+          <p id="story"></p>
           <b>Issues</b>
           <p>stuff goes here</p>
       </div>
