changes made to history and values

--- a/table.html
+++ b/table.html
@@ -29,14 +29,23 @@
     <th ><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button>
     <style ="text/css">
     #leftPopup {
-        background-color: rgba(0, 0, 255, 0.3);
+        color: white;
+        background-color: rgba(0, 0, 255, 0.5);
+        width: 23%
     }
 </style>
-      <div id="leftPopup" style="visibility:none">
-        <b> background</b>
+        <div id="leftPopup" style="visibility:none"> </br></br>
+
+        <b> History</b></br></br>
           <p id="story"></p>
           <b>Issues</b>
-          <p>stuff goes here</p>
+            <p id="popupIssues"></p>
+          <!--<p id="issue1"></p>-->
+          <!--<p id="issue2"></p>-->
+          <!--<p id="issue3"></p>-->
+          <!--<p id="issue4"></p>-->
+          <!--<p id="issue5"></p>-->
+          <!--<p id="issue6"></p>-->
       </div>
     </th>
     
