background --> history text change

--- a/table.html
+++ b/table.html
@@ -94,7 +94,7 @@
       <div id="leftPopup" style="visibility:none">
                   <b> History</b></br></br>
 
-        <b> background</b>
+        <b> History</b>
           <p id="story"></p>
           <b>Issues</b>
             <p id="popupIssues"></p>
