--- a/table.html
+++ b/table.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Title</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/leftSide.js"></script>
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title>Title</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/leftSide.js"></script>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/css/bootstrap-slider.min.css">
-<link rel="stylesheet" href="css/style.css">
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/css/bootstrap-slider.min.css">
+  <link rel="stylesheet" href="css/style.css">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/bootstrap-slider.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.0.6-rc.1/dist/js/select2.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/bootstrap-slider.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.0.6-rc.1/dist/js/select2.min.js"></script>
 </head>
+
 <body>
 
-<table style="width:100%">
-  <tr>
-    <th ><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button>
+  <table style="width:100%">
+    <tr>
+      <th><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button>
 
 
 
-      <select id="stateSelect" class="js-states form-control">
+        <select id="stateSelect" class="js-states form-control">
           <optgroup label="Alaskan/Hawaiian Time Zone">
             <option value="AK">Alaska</option>
             <option value="HI">Hawaii</option>
@@ -91,41 +96,51 @@
             <option value="WV">West Virginia</option>
           </optgroup>
         </select>
-      <div id="leftPopup" style="visibility:none">
-                  <b> History</b></br></br>
+        <div id="leftPopup" style="visibility:none">
+          <b> History</b></br></br>
 
-        <b> History</b>
+          <b> History</b>
           <p id="story"></p>
           <b>Issues</b>
-            <p id="popupIssues"></p>
+          <p id="popupIssues"></p>
           <!--<p id="issue1"></p>-->
           <!--<p id="issue2"></p>-->
           <!--<p id="issue3"></p>-->
           <!--<p id="issue4"></p>-->
           <!--<p id="issue5"></p>-->
           <!--<p id="issue6"></p>-->
-      </div>
+        </div>
 
-      
-    </th>
-    
-    <th id="proposal" width="33%">Proposal:
-    <!-- <h3>Media Exports:</h3>
+
+      </th>
+
+      <th id="proposal" width="33%">Proposal:
+        <!-- <h3>Media Exports:</h3>
     <br> -->
-    <!-- <input id="ex1" width:'100%' data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/> -->
+        <!-- <input id="ex1" width:'100%' data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/> -->
 
 
-    </th>
-    <th id="rightMap"><iframe height="600" src="Bri_Map_Thai.html"></iframe></th>
+      </th>
+      <th id="rightMap"><iframe height="600" src="Bri_Map_Thai.html"></iframe>
+        <div id="rightPopup" style="visibility:none">
+          <b> Country</b></br></br>
 
-  </tr>
-  <!-- <tr>
+          <b> History</b>
+          <p id="story"></p>
+          <b>Issues</b>
+          <p id="popupCIssues"></p>
+        </div>
+      </th>
+
+    </tr>
+    <!-- <tr>
     <td>Details</td>
     <td width="33%">Proposal</td>
     <td>Country Details</td>
 
   </tr> -->
-</table>
+  </table>
 
 </body>
+
 </html>
