--- a/table.html
+++ b/table.html
@@ -97,10 +97,9 @@
           </optgroup>
         </select>
         <div id="leftPopup" style="visibility:none">
-          <b> History</b></br></br>
-
-          <b> History</b>
+          <b>Real World Story</b></br></br>
           <p id="story"></p>
+          <p Learn More: https://www.state.gov/r/pa/map/218797.htm></p>
           <b>Issues</b>
           <p id="popupIssues"></p>
           <!--<p id="issue1"></p>-->
@@ -124,9 +123,6 @@
       <th id="rightMap"><iframe height="600" src="Bri_Map_Thai.html"></iframe>
         <div id="rightPopup" style="visibility:none">
           <b> Country</b></br></br>
-
-          <b> History</b>
-          <p id="story"></p>
           <b>Issues</b>
           <p id="popupCIssues"></p>
         </div>
