updated right labels

--- a/table.html
+++ b/table.html
@@ -99,7 +99,7 @@
         <div id="leftPopup" style="visibility:none">
           <b>Real World Story</b></br></br>
           <p id="story"></p>
-          <p Learn More: https://www.state.gov/r/pa/map/218797.htm></p>
+          <p>Learn More: //www.state.gov/r/pa/map/218797.htm</p>
           <b>Issues</b>
           <p id="popupIssues"></p>
           <!--<p id="issue1"></p>-->
@@ -122,8 +122,6 @@
       </th>
       <th id="rightMap"><iframe height="600" src="Bri_Map_Thai.html"></iframe>
         <div id="rightPopup" style="visibility:none">
-          <b> Country</b></br></br>
-          <b>Issues</b>
           <p id="popupCIssues"></p>
         </div>
       </th>
