hard code refresh

--- a/table.html
+++ b/table.html
@@ -99,8 +99,8 @@
         <div id="leftPopup" style="visibility:none">
           <b>Real World Story</b></br></br>
           <p id="story"></p>
-          <p>Learn More: //www.state.gov/r/pa/map/218797.htm</p>
-          <b>Issues</b>
+          <p>Learn More: //www.state.gov/r/pa/map/218797.htm</p></br>
+          <b>Issues</b></br></br>
           <p id="popupIssues"></p>
           <!--<p id="issue1"></p>-->
           <!--<p id="issue2"></p>-->
