--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var marker = new mapboxgl.Marker({
 
 function onDragEnd() {
 //    var lngLat = marker.getLngLat();
-    var win = window.open('http://facebook.com', '_self');
+    var win = window.open('table.html', '_self');
     win.focus();
 //    coordinates.style.display = 'block';
 //    coordinates.innerHTML = 'Longitude: ' + lngLat.lng + '<br />Latitude: ' + lngLat.lat;
@@ -152,6 +152,7 @@ var popup = new mapboxgl.Popup({closeOnClick: false})
 
 <div class="sidenav">
   <img src="logo.png" alt="Logo">
+  <a href="./table.html"></a>
   <p><a href="https://twitter.com/intent/tweet?screen_name=StateDept&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @StateDept</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
   <p>
     <a class="twitter-timeline" href="https://twitter.com/StateDept?ref_src=twsrc%5Etfw">Tweets by StateDept</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
