--- a/table.html
+++ b/table.html
@@ -24,13 +24,15 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/bootstrap-slider.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.0.6-rc.1/dist/js/select2.min.js"></script>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
 </head>
 
 <body>
 
   <table style="width:100%">
     <tr>
-      <th><iframe height="600" src="Bri_map.html"></iframe><button id="leftMap">test</button>
+      <th><iframe height="600" width="100%" src="Bri_map.html"></iframe><button id="leftMap">test</button>
 
 
 
@@ -99,7 +101,7 @@
         <div id="leftPopup" style="visibility:none">
           <b>Real World Story</b></br></br>
           <p id="story"></p>
-          <p>Learn More: //www.state.gov/r/pa/map/218797.htm</p></br>
+          <p>Learn More: https://www.state.gov/r/pa/map/218797.html</p></br>
           <b>Issues</b></br></br>
           <p id="popupIssues"></p>
           <!--<p id="issue1"></p>-->
@@ -118,9 +120,9 @@
     <br> -->
         <!-- <input id="ex1" width:'100%' data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/> -->
 
-
       </th>
-      <th id="rightMap"><iframe height="600" src="Bri_Map_Thai.html"></iframe>
+
+      <th id="rightMap"><iframe height="600" width="100%" src="Bri_Map_Thai.html"></iframe>
         <div id="rightPopup" style="visibility:none">
           <p id="popupCIssues"></p>
         </div>
