--- a/table.html
+++ b/table.html
@@ -25,6 +25,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/bootstrap-slider.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.0.6-rc.1/dist/js/select2.min.js"></script>
   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102829142-22"></script>
   <script>
@@ -42,7 +44,7 @@
   <table style="width:100%">
     <tr>
       <th><iframe height="600" width="100%" src="Bri_map.html"></iframe>
-        <!-- <button id="leftMap">test</button> -->
+        <button id="leftMap">test</button>
 
 
 
