--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@ var popup = new mapboxgl.Popup({closeOnClick: false})
   <img src="logo.png" alt="Logo">
   <a href="./table.html"></a>
   <a href="./success.html"></a>
+    <a href="./win.html"></a>
+
 
   <p><a href="https://twitter.com/intent/tweet?screen_name=StateDept&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @StateDept</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
   <p>
