--- a/table.html
+++ b/table.html
@@ -127,6 +127,7 @@
               </optgroup>
               <optgroup label="Eastern Time Zone">
                 <option value="CT">Connecticut</option>
+                <option value="2">District of Columbia</option>
                 <option value="DE">Delaware</option>
                 <option value="FL">Florida</option>
                 <option value="GA">Georgia</option>
