--- a/win.html
+++ b/win.html
@@ -30,7 +30,7 @@
   <center>
   <br /><br />
 <img src="logo2.png" alt="Logo">
-  {% comment %} <h1>You Score: 51%</h1> {% endcomment %}
+   <!-- <h1>You Score: 51%</h1>  -->
   If you were the diplomat and did this deal we there would've been a 51% chance that Thailand will accpet it.<br />
   		<p id="proposalResults"></p>
 
