--- a/win.html
+++ b/win.html
@@ -31,8 +31,9 @@
   <br /><br />
 <img src="logo2.png" alt="Logo">
    <!-- <h1>You Score: 51%</h1>  -->
-  If you were the diplomat and did this deal we there would've been a 51% chance that Thailand will accpet it.<br />
-  		<p id="proposalResults"></p>
+   <br>
+  <!-- If you were the diplomat and did this deal we there would've been a 51% chance that Thailand will accept it.<br /> -->
+  		<h1 id="proposalResults"></h1>
 
   <h6>Liked this? Let us tweet about it.</h6>
   <a href="https://twitter.com/intent/tweet?screen_name=StateDept&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @StateDept</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
