--- a/table.html
+++ b/table.html
@@ -51,6 +51,8 @@
       
         <div id="leftPopup" style="visibility:none">
           <b>Real World Story</b></br></br>
+          <p id="state"></p>
+
           <p id="story"></p>
           <p>Learn More: https://www.state.gov/r/pa/map/218797.html</p></br>
           <b>Issues</b></br></br>
