--- a/table.html
+++ b/table.html
@@ -44,7 +44,7 @@
   <table style="width:100%">
     <tr>
       <th><iframe height="600" width="100%" src="Bri_map.html"></iframe>
-        <button id="leftMap">test</button>
+        <!-- <button id="leftMap">test</button> -->
 
 
 
